--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </div>
           </section>
 
-          <section class="home-card">
-            <h2>ルール説明動画</h2>
+          <section class="home-card disclaimer-card">
+            <h2>ルール説明動画・注意事項</h2>
             <div class="video-wrapper">
               <!-- 利用者が差し替え想定のダミー埋め込み -->
               <iframe
@@ -80,10 +80,9 @@
               <button id="open-options" class="btn ghost">オプション</button>
               <button id="open-tos" class="btn ghost">利用規約</button>
             </div>
-          </section>
 
-          <section class="home-card disclaimer-card">
-            <h2>注意事項</h2>
+            <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.08); margin: 14px 0;" />
+
             <ul>
               <li>本ツールは個人が制作した <strong>非公式ファンツール</strong> です。</li>
               <li>Hypergryph / Yostar とは一切関係ありません。</li>
