--- a/index.html
+++ b/index.html
@@ -763,8 +763,8 @@
                 ルールテキスト（配信オーバーレイ表示用）
                 <textarea
                   id="rules-rule-text"
-                  rows="6"
-                  placeholder="例）&#10;・この回は○○禁止&#10;・妨害は必ず守る&#10;・会議フェーズは5分"
+                  rows="3"
+                  placeholder="例）&#10;・☆6禁止&#10;・合計コスト20以下"
                   style="width: 100%; padding: 10px; margin-top: 6px; border-radius: 10px; border: 1px solid rgba(255,255,255,0.2); background: rgba(5,7,18,0.8); color: #f5f5f7; font-size: 14px; resize: vertical;"
                 ></textarea>
                 <p style="font-size: 11px; color: #a0a4ba; margin-top: 6px;">
@@ -803,7 +803,7 @@
 
             <div class="options-row">
               <label>
-                  人狼妨害（編集可能: タイトル / 表示文言 / コスト）
+                  人狼妨害（キー / 表示文言 / ON-OFF / コスト）
                   <div id="rules-wolf-actions-editor" style="display: flex; flex-direction: column; gap: 10px; margin-top: 6px;">
                     <!-- JSで妨害エディタを描画 -->
                   </div>
