--- a/index.html
+++ b/index.html
@@ -691,6 +691,14 @@
             </label>
           </section>
 
+          <section class="options-section">
+            <h3>ルール</h3>
+            <p style="margin: 0 0 8px 0; color: #a0a4ba; font-size: 12px;">
+              映像下エリア（妨害ON/OFF・表示文言・ルールテキスト等）はここから編集できます（GMのみ）。
+            </p>
+            <button id="opt-open-rules-settings" class="btn secondary wide">ルール設定を開く</button>
+          </section>
+
           <button id="opt-back-home" class="btn ghost small">
             ホーム画面に戻る
           </button>
