--- a/index.html
+++ b/index.html
@@ -863,6 +863,18 @@
         </div>
       </div>
 
+      <!-- ログ表示ポップアップ（ゲストUI用） -->
+      <div id="log-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content wide">
+          <h2>ゲームログ</h2>
+          <div id="log-content" class="log-content"></div>
+          <div class="modal-actions">
+            <button data-close-modal="log-modal" class="btn primary">閉じる</button>
+          </div>
+        </div>
+      </div>
+
       <!-- 勝敗結果ポップアップ -->
       <div id="result-modal" class="modal hidden">
         <div class="modal-backdrop"></div>
