--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </div>
             </div>
 
-            <!-- プレイ映像エリアの下：操作エリアと同じ高さの新規エリア（後で機能追加用） -->
+            <!-- ルール表示エリア -->
             <div class="play-video-under-space"></div>
           </section>
 
