--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
             </div>
 
             <!-- ルール表示エリア -->
-            <div class="play-video-under-space"></div>
+            <div class="play-video-under-space">
+              <div id="game-version-display" class="game-version-display"></div>
+            </div>
           </section>
 
           <!-- ② 操作パネル -->
