--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
             
             <!-- プレイ映像用 16:9 透明エリア（背景レイヤー） -->
             <div class="play-video-wrapper">
+              <!-- 背景パネル（プレイ映像エリアの周囲を埋める） -->
+              <div class="play-video-bg-panel"></div>
               <div class="play-video-area">
               </div>
             </div>
