--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 ・使用すると、その失敗はなかったことになり、成功（○）として記録されます<br />
                 ・1ゲーム中に5回まで使用可能です<br />
                 ・<strong style="color: #8be6c3;">1ラウンドに1度だけ使用可能（そのラウンドの最初の失敗のみ打ち消し可能）</strong><br />
-                ・「背水の陣」の妨害が適用されている場合は、そのラウンド中は使用できません
+                ・「背水の陣」の妨害が適用されている場合は、そのターン中は使用できません
               </p>
               <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
                 <strong>行動指針</strong><br />
