--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section id="waiting-screen" class="screen">
         <div class="waiting-layout">
           <div class="waiting-content">
-            <h1 class="waiting-title">ルーム待機中</h1>
+            <h1 id="waiting-title" class="waiting-title">ルーム待機中</h1>
             <p class="waiting-subtitle">参加者を待っています...</p>
             
             <div class="waiting-room-id-section">
